--- a/index.html
+++ b/index.html
@@ -4,11 +4,67 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>LAMBORGHINI</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,400&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <header class="header">
+      <div class="big_container">
+        <nav class="nav">
+          <ul class="menu_list menu_left">
+            <li class="menu_item">
+              <a href="#" class="menu_link">О гонке</a>
+            </li>
+            <li class="menu_item">
+              <a href="#" class="menu_link">Трек</a>
+            </li>
+            <li class="menu_item">
+              <a href="#" class="menu_link">Lamborghini Super trofeo</a>
+            </li>
+            <li class="menu_item">
+              <a href="#" class="menu_link">Новости</a>
+            </li>
+          </ul>
+          <a href="#" class="logo"><img src="images/logo.svg" alt="logo" /></a>
+          <ul class="menu_list menu_right">
+            <li class="menu_item">
+              <a href="#" class="menu_link">Купить билеты</a>
+            </li>
+            <li class="menu_item">
+              <a href="#" class="menu_link">Смотреть онлайн</a>
+            </li>
+            <li class="menu_item">
+              <a href="#" class="menu_link">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <main class="main">
+      <section class="promo">
+        <div class="big_container">
+          <div class="promo__inner">
+            <h1 class="title">LAMBORGHINI SUPER TROFEO</h1>
+            <h2 class="subtitle">
+              Гранд-финал 2022
+              <span>3-6 ноября </span>
+            </h2>
+            <p class="promo_text">автодром Портимао, Португалия</p>
+            <a href="#" class="promo_arrow"
+              ><img src="images/arrow.svg" alt="arrow"
+            /></a>
+          </div>
+        </div>
+      </section>
+    </main>
+
     <script src="js/main.js"></script>
   </body>
 </html>
